@@ -5054,7 +5054,7 @@
 +#define	SIG_SETMASK	3	/* Set the set of blocked signals.  */
 --- /dev/null
 +++ b/ports/sysdeps/unix/bsd/bsd4.4/kfreebsd/bits/siginfo.h
-@@ -0,0 +1,214 @@
+@@ -0,0 +1,220 @@
 +/* siginfo_t, sigevent and constants.  FreeBSD version.
 +   Copyright (C) 1997-1998, 2000-2002 Free Software Foundation, Inc.
 +   This file is part of the GNU C Library.
@@ -5256,6 +5256,8 @@
 +    void *sigev_notify_attributes;		/* Really pthread_attr_t.  */
 +  } sigevent_t;
 +
++#define sigev_notify_kqueue	sigev_signo
++
 +/* `sigev_notify' values.  */
 +enum
 +{
@@ -5264,8 +5266,12 @@
 +  SIGEV_NONE = 0,		/* Other notification: meaningless.  */
 +# define SIGEV_NONE	SIGEV_NONE
 +  /* Not yet supported by the kernel.  */
-+  SIGEV_THREAD = 2		/* Deliver via thread creation.  */
++  SIGEV_THREAD = 2,		/* Deliver via thread creation.  */
 +# define SIGEV_THREAD	SIGEV_THREAD
++  SIGEV_KEVENT = 3,
++# define SIGEV_KEVENT	SIGEV_KEVENT
++  SIGEV_THREAD_ID = 4,
++# define SIGEV_THREAD_ID	SIGEV_THREAD_ID
 +};
 +
 +#endif	/* have _SIGNAL_H.  */
