@@ -26,6 +26,8 @@ eglibc (2.13-8) UNRELEASED; urgency=low
     --as-needed and --no-as-needed to the linker.
   * Update breaks on pre-multiarch packages.  Closes: #631907.
   * libc.preinst: detect broken LD_LIBRARY_PATH.  Closes: #630608.
+  * kfreebsd/local-sysdeps.diff, update to revision 3501 (from glibc-bsd),
+    to fix <bits/siginfo.h>.  Closes: #631867.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3467 (from glibc-bsd).
